Uploaded image for project: 'ActiveMQ C++ Client'
  1. ActiveMQ C++ Client
  2. AMQCPP-266

Client Ack is not applied across the session

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 3.0.1
    • 3.1
    • CMS Impl, Openwire
    • None

    Description

      When a Session is in Client Ack it should apply the ack to all the consumers in the Session not just the one that the message came from.

      Attachments

        Activity

          Resolved in trunk, new tests added to the integration suite.

          tabish Timothy A. Bish added a comment - Resolved in trunk, new tests added to the integration suite.

          People

            tabish Timothy A. Bish
            tabish Timothy A. Bish
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: