https://issues.apache.org/activemq/browse/AMQCPP-266

Add additional integration tests for Client Ack

git-svn-id: https://svn.apache.org/repos/asf/activemq/activemq-cpp/trunk@835848 13f79535-47bb-0310-9956-ffa450edef68